# AI-Trader-AShare

./: .env.example  .gitignore  MULTI_AGENT_GUIDE.md  README.md  main.py  pyproject.toml  run_competition.py  run_simulation.py  test_new_agent.py  trading_agents.py  trading_engine.py
.github/workflows/: competition.yml  deploy.yml  update-data.yml  update-prices.yml
agents/: __init__.py  base_agent.py  llm_agents.py
core/: __init__.py  agent_state.py  engine.py  market_data.py  time_aware_engine.py
data/: README.md
data/agent_data/: DeepSeek_Trader_state.json  GLM_Trader_state.json  Kimi_Trader_state.json  Ring_Trader_state.json
data/daily_prices/: daily_prices_000001.SZ.json  daily_prices_000002.SZ.json  daily_prices_000004.SZ.json  daily_prices_000006.SZ.json  daily_prices_000007.SZ.json  daily_prices_000008.SZ.json  daily_prices_000009.SZ.json  daily_prices_000010.SZ.json  daily_prices_000011.SZ.json  daily_prices_000012.SZ.json  daily_prices_000014.SZ.json  daily_prices_000016.SZ.json  daily_prices_000017.SZ.json  daily_prices_000019.SZ.json  daily_prices_000020.SZ.json  daily_prices_000021.SZ.json  daily_prices_000025.SZ.json  daily_prices_000026.SZ.json  daily_prices_000027.SZ.json  daily_prices_000028.SZ.json  daily_prices_000029.SZ.json  (+5419 more)
docs/: DASHBOARD_UPDATES.md  DEPLOYMENT.md  LOCAL_PREVIEW.md  index.html  refer.md
scripts/: check_status.py  copy_data_to_docs.py  fetch_index_benchmark.py  fetch_market_data.py  price_data_manager.py  test_agents.py  test_jina.py  test_models.py  test_tushare.py
tools/: __init__.py  trading_tools.py
(+8 files in other folders)
