[project]
name = "ai-trader-ashare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "requests>=2.32.5",
    "tushare>=1.4.24",
]
